src/test/InstanceFromClass/InstanceFromClass.expected
error: InstanceFromClass.panda:10:23: instance field 'instanceField' cannot be accessed from a class context
error: InstanceFromClass.panda:11:23: instance method 'instanceMethod' cannot be accessed from a class context
2 errors
