src/test/InstanceFromClass/InstanceFromClass.panda
class Test {
    var instanceField:Int

    method instanceMethod():Int {
        return instanceField
    }

    @class 
    method main() {
        Console.write(instanceField)
        Console.write(instanceMethod())
    }
}